dfir_rs/tests/compile-fail/surface_demuxenum_port_wrong_one.stderr
error[E0599]: no variant named `Circle` found for enum `Shape`
  --> tests/compile-fail/surface_demuxenum_port_wrong_one.rs:14:18
   |
6  |     enum Shape {
   |     ---------- variant `Circle` not found here
...
14 |         my_demux[Circle] -> for_each(std::mem::drop);
   |                  ^^^^^^ variant not found in `Shape`
